Fixed mobile layout issue for About section on Chrome

--- a/Sunnyside Agency Landing Page/stylesheets/css/main.css
+++ b/Sunnyside Agency Landing Page/stylesheets/css/main.css
@@ -146,6 +146,7 @@ section#about > ul .grid__text {
   justify-content: center;
   text-align: left;
   padding: 0 22.5%;
+  height: 100%;
 }
 section#about > ul .grid__text h2 {
   font-family: "Fraunces", serif;
@@ -216,6 +217,15 @@ section#about > ul li:nth-of-type(4) .grid__text a::selection {
 section#about > ul li:nth-of-type(4) .grid__text a::before {
   background-color: #fe7867;
 }
+section#about > ul li:nth-of-type(5),
+section#about > ul li:nth-of-type(6) {
+  position: relative;
+}
+section#about > ul li:nth-of-type(5) .grid__text,
+section#about > ul li:nth-of-type(6) .grid__text {
+  position: absolute;
+  bottom: 0;
+}
 section#about > ul li:nth-of-type(5) {
   grid-area: grid__cell-5;
 }
@@ -249,23 +259,10 @@ section#about > ul li:nth-of-type(6) .grid__text p {
   color: #19536b;
   opacity: 1;
 }
-section#about > ul li:nth-of-type(5),
-section#about > ul li:nth-of-type(6) {
-  position: relative;
-}
-section#about > ul li:nth-of-type(5) .grid__text,
-section#about > ul li:nth-of-type(6) .grid__text {
-  position: absolute;
-  top: 0;
-}
-section#about > ul section {
-  min-height: 100%;
-  min-width: 100%;
-}
 @media (max-width: 1440px) {
   section#about > ul {
     grid-template-columns: 1fr;
-    grid-template-rows: repeat(6, 100%);
+    grid-template-rows: repeat(6, auto);
     grid-template-areas: "grid__cell-2" "grid__cell-1" "grid__cell-3" "grid__cell-4" "grid__cell-5" "grid__cell-6";
   }
   section#about > ul .grid__text {
