--- a/Sunnyside Agency Landing Page/stylesheets/layouts/_about.scss
+++ b/Sunnyside Agency Landing Page/stylesheets/layouts/_about.scss
@@ -14,6 +14,7 @@ section#about > ul {
         justify-content: center;
         text-align: left;
         padding: 0 22.5%;
+        height: 100%;
                 
         h2 {
             font-family: $font__family-fraunces;
@@ -68,7 +69,7 @@ section#about > ul {
     li:nth-of-type(1) {
         grid-area: grid__cell-1;
 
-        & .grid__text {
+        .grid__text {
             h2::selection,
             p::selection,
             a::selection {
@@ -102,6 +103,16 @@ section#about > ul {
             a::before {
                 background-color: $color__primary-soft-red;
             }
+        }
+    }
+
+    li:nth-of-type(5),
+    li:nth-of-type(6) {
+        position: relative;
+
+        .grid__text {
+            position: absolute;
+            bottom: 0;
         }
     }
 
@@ -146,24 +157,9 @@ section#about > ul {
         }
     }
 
-    li:nth-of-type(5),
-    li:nth-of-type(6) {
-        position: relative;
-
-        & .grid__text {
-            position: absolute;
-            top: 0;
-        }
-    }
-
-    section {
-        min-height: 100%;
-        min-width: 100%;
-    }
-
     @media (max-width: $breakpoint__desktop) {
         grid-template-columns: 1fr;
-        grid-template-rows: repeat(6, 100%);
+        grid-template-rows: repeat(6, auto);
         grid-template-areas: 'grid__cell-2'
                              'grid__cell-1'
                              'grid__cell-3'
